# s3-client-app

./: .gitignore  AGENTS.md  GITHUB_ACTIONS.md  README.md  SIGNING.md  WINDOWS_INSTALL.md  justfile  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build-simple.yml  release.yml
src/: app.js  index.html  main.js  state-transitions.mjs  style.css
src-tauri/: Cargo.toml  icons.icns  justfile  tauri.conf.json  temp.icns
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  main.rs  s3_client.rs
test/: select-data-source-transition.test.mjs
